--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
     env_file:
       - .env
     environment:
-      DATABASE_ADDRESS="db"
+      - DATABASE_ADDRESS="db"
     volumes:
     - ./:/workspace:shared
 volumes:
